--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
-,
+*,
 *::before,
 ::after {
   box-sizing: border-box;
 }
 
 :root {
-  --clr-accent: darkslateblue;
+  --clr-accent1: deepskyblue;
+  --clr-accent2: darkorange;
+  --clr-accent3: darkslateblue;
   --clr-white: white;
+  --clr-black: blacke;
 
   --s-base: 1rem;
   --s-base-xl: calc(var(--s-base) 2);
   --s-base-small: calc(var(--s-base) / 2);
+  --s-base-xs: calc(var(--s-base) / 5);
   --s-border: 0.125rem;
   --s-radius-outer: 0.75rem;
   --s-radius-inner: calc(var(--s-radius-outer) / 3);
@@ -24,45 +28,90 @@ main {
   display: flex;
   gap: var(--s-base-xl);
 }
+
 body {
   margin: 2rem;
 }
-.preview-card {
 
+.preview-card article {
+  height: 500px;
+}
+
+.preview-card {
+  font-size: 0.9rem;
   padding: var(--s-base);
 
-  max-width: 400px;
+  width: 400px;
 }
+
 .preview-card-travel {
   border: black solid var(--s-border);
   border-radius: var(--s-radius-outer);
-  box-shadow: var(--clr-accent) 10px 10px 1px;
+  box-shadow: var(--clr-accent3) 10px 10px 1px;
   padding: var(--s-base);
 }
 
 .preview-card-lifestyle {
   border: black solid var(--s-border);
   border-radius: var(--s-radius-outer);
-  box-shadow: darkorange 10px 10px 1px;
+  box-shadow: var(--clr-accent2) 10px 10px 1px;
   padding: var(--s-base);
 }
+
 img {
   border-radius: var(--s-radius-inner);
-  max-width: 360px;
+  height: 165px;
+  width: 330px;
 }
+
 .date-author {
   display: flex;
   justify-content: space-between;
-
 }
+
 .photo-author {
   border-radius: 50%;
   width: 2rem;
   height: 2rem;
   align-self: center;
-  border: darkorange solid var(--s-border);
 }
+
+.preview-card-travel .photo-author {
+  border: var(--clr-accent3) solid var(--s-border);
+}
+
+.preview-card-lifestyle .photo-author {
+  border: var(--clr-accent2) solid var(--s-border);
+}
+
 .author {
   display: flex;
   gap: var(--s-base-small);
+}
+
+a {
+  background: var(--clr-accent1);
+  border-radius: var(--s-radius-outer);
+  padding-inline: var(--s-base);
+  padding-block: var(--s-base-xs);
+}
+
+h2 {
+  font-size: calc(var(--s-base) * 1.4);
+}
+
+button {
+  color: var(--clr-white);
+  border-radius: var(--s-radius-inner);
+  border: none;
+  padding-inline: var(--s-base);
+  padding-block: var(--s-base-small);
+}
+
+.preview-card-travel button {
+  background-color: var(--clr-accent3);
+}
+
+.preview-card-lifestyle button {
+  background: var(--clr-accent2);
 }
